refactor: refactor for linter compliance and warnings